--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -32,3 +32,13 @@
     text-align: left;
     line-height: 1.5em;
 }
+
+.recipe.dark{
+    background: #555;
+    color: #e4e4e4;
+}
+
+
+.page-title.dark{
+    color: #e4e4e4;
+}
